test_cases/fail/f02.lxr
SCRIPT AREA
START SCRIPT
DECLARE BOOL b
b="MAYBE"
END SCRIPT
